--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -15,18 +15,17 @@
 
 
         <h1 class="h3 mb-3 fw-normal">Личный кабинет врача</h1>
-        <p>
+        <div>
             <label for="username" class="visually-hidden">Имя пользователя</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
-                   autofocus></p>
-        <p><label for="password" class="visually-hidden">Пароль</label>
+                   autofocus></div>
+        <div><label for="password" class="visually-hidden">Пароль</label>
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-        </p>
-        <!--        <div class="checkbox mb-3">-->
-        <!--            <label>-->
-        <!--                <input type="checkbox" value="remember-me"> Remember me-->
-        <!--            </label>-->
-        <!--        </div>-->
+        </div>
+        <input type="hidden"
+                th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"
+        />
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
 
