--- a/src/main/resources/templates/doctors/createAppointment.html
+++ b/src/main/resources/templates/doctors/createAppointment.html
@@ -26,6 +26,10 @@
 <!--                   placeholder="Данные и рекомендации" required>-->
 <!--        </label>-->
         <br>
+        <input type="hidden"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"
+        />
         <button class="btn btn-success" type="submit">Сохранить</button>
     </form>
 </div>
