--- a/src/main/resources/templates/doctors/schedule.html
+++ b/src/main/resources/templates/doctors/schedule.html
@@ -32,12 +32,17 @@
                 <td th:text="${r.patient.name}">Имя пациента</td>
                 <td th:text="${r.patient.phone}">Телефон пациента</td>
                 <td>
+                    <input type="hidden"
+                           th:name="${_csrf.parameterName}"
+                           th:value="${_csrf.token}"
+                    />
                     <button class="btn btn-success" type="submit" th:name="reservationId" th:value="${r.id}">Выбрать врача
                     </button>
                 </td>
             </tr>
             </tbody>
         </table>
+
     </form>
 </div>
 </body>
