--- a/src/main/resources/templates/doctors/searchPatient.html
+++ b/src/main/resources/templates/doctors/searchPatient.html
@@ -49,6 +49,10 @@
                 <td th:text="${p.address}">Адрес</td>
                 <td th:text="${p.phone}">Телефон</td>
                 <td>
+                    <input type="hidden"
+                           th:name="${_csrf.parameterName}"
+                           th:value="${_csrf.token}"
+                    />
                     <button class="btn btn-success" type="submit" th:name="patientId" th:value="${p.id}">Выбрать
                     </button>
                 </td>
