--- a/src/main/resources/templates/patients/registration.html
+++ b/src/main/resources/templates/patients/registration.html
@@ -67,7 +67,10 @@
         </label>
 
         <br>
-
+        <input type="hidden"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"
+        />
         <button class="btn btn-success" type="submit">Войти</button>
     </form>
 </div>
