--- a/src/main/resources/templates/patients/selectDate.html
+++ b/src/main/resources/templates/patients/selectDate.html
@@ -28,12 +28,20 @@
             <tbody>
             <tr th:each="time : ${noReservationTime}">
                 <td>
+                    <input type="hidden"
+                           th:name="${_csrf.parameterName}"
+                           th:value="${_csrf.token}"
+                    />
                     <button class="btn btn-success" type="submit" th:text="${time}" th:name="time" th:value="${time}">
                     </button>
                 </td>
             </tr>
             </tbody>
         </table>
+        <input type="hidden"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"
+        />
     </form>
 </div>
 
