--- a/src/main/resources/templates/patients/selectDoctor.html
+++ b/src/main/resources/templates/patients/selectDoctor.html
@@ -37,6 +37,11 @@
         </label>
 
         <br>
+
+        <input type="hidden"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"
+        />
         <button class="btn btn-success" type="submit">Найти врача</button>
     </form>
 </div>
@@ -49,7 +54,10 @@
                 <td th:text="${d.specialization}">Специализация</td>
                 <td th:text="${d.name}">Имя</td>
                 <td th:text="${d.surname}">Фамилия</td>
-                <td>
+                <td>    <input type="hidden"
+                               th:name="${_csrf.parameterName}"
+                               th:value="${_csrf.token}"
+                />
                     <button class="btn btn-success" type="submit" th:name="doctorId" th:value="${d.id}">Выбрать врача
                     </button>
                 </td>
